<resources>
    <string name="app_name">智慧商洛</string>

    <string name="tab_tag_one">资讯</string>
    <string name="tab_tag_two">人才</string>
    <string name="tab_tag_three">社保</string>
    <string name="tab_tag_four">个人中心</string>
    <string name="login_prompt_name_empty">请输入手机号码</string>
    <string name="login_prompt_name_format_error">手机号码输入有误</string>
    <string name="register_account_realname_tip">请填写你的真实姓名</string>
    <string name="register_account_confirm_pwd_tip">确认密码</string>
    <string name="please_input_verifiction_code">请输入验证码</string>
    <string name="register_account_pwd_tip">密码为8~20位数字或字母组合</string>
    <string name="register_account_checkbox_tip">已阅读并同意使用条款和隐私说明</string>
    <string name="login_account_pwd_tip">请输入密码</string>
    <string name="register_account_ok">完成注册</string>
    <string name="str_bnt_determine">确 定</string>
    <string name="login_prompt_pwd_format_error">密码输入有误</string>
    <string name="login_wait_title">登	录</string>
    <string name="login_bnt_forgetpwd">忘记密码</string>
    <string name="register_new_account">我要注册</string>
    <string name="verifiction_code_not_null">手机验证码不能为空！</string>
    <string name="password_not_null">密码不能为空！</string>
    <string name="confirm_password_not_null">确认密码不能为空！</string>
    <string name="confirm_password_inconformity">两次密码不一致！请确认后再次输入。</string>
    <string name="forgetpwd_pincode_bnt">下一步</string>

    <string name="base_progress_dialog_loading">正在加载...</string>
    <string name="base_progress_dialog_cancel">取消</string>
    <string name="base_progress_dialog_ok">确定</string>
    <string name="base_progress_dialog_title">提示</string>
    <string name="base_exit_app">确认退出应用吗？</string>
    <!-- error -->
    <string name="str_network_off">网络连接已断开，请连接网络！</string>
    <string name="str_network_not_use">当前已连接上的网络不可用，请连接其他网络！</string>
    <string name="error_please_check_network">网络连接失败，请检查网络。</string>
    <string name="error_timeout">网络连接超时，请重试。</string>
    <string name="error_not_found_server">未发现指定服务器，请切换网络后重试。</string>
    <string name="error_url_error">URL错误。</string>
    <string name="error_not_found_cache">没有找到缓存.</string>
    <string name="error_system_unsupport_method">系统不支持的请求方法。</string>
    <string name="error_parse_data_error">解析数据时发生错误。</string>
    <string name="error_unknow">未知错误，请检查请求地址是否正确！</string>

</resources>
