<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_parent"
    android:background="@color/white">

    <ScrollView
        style="@style/match_parent"
        android:background="@null"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dip"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/app_logo" />

            <TextView
                style="@style/wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="空中急救"
                android:textColor="@color/red"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dip"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/moblie_no_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/login_radius_edit_view_selector"
                    android:drawableLeft="@mipmap/phone_number_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/login_prompt_name_empty"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingLeft="10dp"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@id/moblie_no_edittext"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_radius_edit_view_selector"
                    android:drawableLeft="@mipmap/lock_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/login_account_pwd_tip"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_edittext"
                    android:layout_marginTop="30dip"
                    android:background="@drawable/login_button_selector"
                    android:gravity="center"
                    android:paddingBottom="13dp"
                    android:paddingTop="13dp"
                    android:text="@string/login_wait_title"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_button"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="60dp"
                    android:layout_marginTop="60dip">

                    <Button
                        android:id="@+id/forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/login_bnt_forgetpwd"
                        android:textColor="@color/red"
                        android:textSize="17sp" />

                    <Button
                        android:id="@+id/tv_regist_new_acccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@null"
                        android:text="@string/register_new_account"
                        android:textColor="@color/red"
                        android:textSize="17sp" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>