<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/titel_layout"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <ScrollView
        style="@style/match_width"
        android:layout_below="@id/titel_layout"
        android:layout_centerHorizontal="true"
        android:fadeScrollbars="false"
        android:fadingEdge="none"
        android:fastScrollEnabled="false"
        android:scrollbars="none"
        android:scrollingCache="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="64dip"
            android:background="@null"
            android:orientation="vertical">

            <EditText
                android:id="@+id/moblie_no_edittext"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:background="@drawable/login_radius_edit_view_selector"
                android:drawableLeft="@mipmap/phone_number_icon"
                android:drawablePadding="10dp"
                android:hint="@string/login_prompt_name_empty"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="10dp"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/verifiction_code"
                    android:layout_width="match_parent"
                    android:layout_height="48dip"
                    android:layout_weight="2"
                    android:background="@drawable/login_left_radius_edit_view_selector"
                    android:hint="@string/please_input_verifiction_code"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/get_verifiction_code"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="4"
                    android:background="@drawable/button_right_radius_selector"
                    android:gravity="center"
                    android:textColor="@color/white" />
            </LinearLayout>

            <EditText
                android:id="@+id/password_one"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_radius_edit_view_selector"
                android:drawableLeft="@mipmap/lock_icon"
                android:drawablePadding="10dp"
                android:hint="@string/register_account_pwd_tip"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="10dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password_two"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_radius_edit_view_selector"
                android:drawableLeft="@mipmap/lock_icon"
                android:drawablePadding="10dp"
                android:hint="@string/register_account_confirm_pwd_tip"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="10dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/determine_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@drawable/login_button_selector"
                android:gravity="center"
                android:paddingBottom="13dp"
                android:paddingTop="13dp"
                android:text="@string/str_bnt_determine"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>